--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 # Use Maven and OpenJDK 17 as the base image
-FROM maven:3.8.7-openjdk-17 AS build
+FROM maven:3.9.6-eclipse-temurin-17 AS build
 
 # Set working directory inside the container
 WORKDIR /app
