--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,27 +1,13 @@
-# Use Maven and OpenJDK 17 as the base image
-FROM maven:3.9.6-eclipse-temurin-17 AS build
-
-# Set working directory inside the container
+# 🏗️ Stage 1: Build the JAR
+FROM maven:3.8.8-eclipse-temurin-17 AS build
 WORKDIR /app
-
-# Copy the Maven project files
 COPY pom.xml .
 COPY src ./src
+RUN mvn clean package -DskipTests  # Builds the JAR
 
-# Build the project
-RUN mvn clean package -DskipTests
-
-# Use OpenJDK 17 as the runtime image
+# 🚀 Stage 2: Run the JAR
 FROM openjdk:17-jdk-alpine
-
-# Set working directory for runtime
 WORKDIR /app
-
-# Copy the built JAR from the build stage
 COPY --from=build /app/target/station-ski.jar /app/station-ski.jar
-
-# Expose the application port
 EXPOSE 8082
-
-# Run the application
 ENTRYPOINT ["java", "-jar", "/app/station-ski.jar"]
