--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,6 +8,6 @@ RUN mvn clean package -DskipTests  # Builds the JAR
 # 🚀 Stage 2: Run the JAR
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
-COPY --from=build /app/target/station-ski.jar /app/station-ski.jar
+COPY --from=build /app/target/gestion-station-ski-1.0.jar /app/gestion-station-ski-1.0.jar
 EXPOSE 8082
 ENTRYPOINT ["java", "-jar", "/app/station-ski.jar"]
