--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,4 +10,4 @@ FROM openjdk:17-jdk-alpine
 WORKDIR /app
 COPY --from=build /app/target/gestion-station-ski-1.0.jar /app/gestion-station-ski-1.0.jar
 EXPOSE 8082
-ENTRYPOINT ["java", "-jar", "/app/station-ski.jar"]
+ENTRYPOINT ["java", "-jar", "/app/gestion-station-ski-1.0.jar"]
